Improve size of pictures and add paragraphs for better UX

--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
     <h1>Odin Recipes</h1>
 
     <h2>Choose your fandom and get ideas for the evening:</h2>
-
+    <p>
     <a href="./recipes/decocktails.html" rel="noreferrer">Disco Elysium</a>
+    </p>
+    <p>
+    <img src="./images/demain.jpg" width = 400 alt ="Harrier and Kim standing and looking at the sea">
+    </p>
 
-    <img src="./images/demain.jpg" alt ="Harrier and Kim standing and looking at the sea">
-
+    <p>
     <a href="./recipes/cbcocktails.html" rel="noreferrer">Cowboy Bebop</a>
-    <img src="./images/cbmain.jpg" alt ="Spike with a cigarette">
+    </p>
+    <p>
+    <img src="./images/cbmain.jpg" width = 400 alt ="Spike with a cigarette">
+    </p>
+
+    
 </body>
 </html>
