--- a/recipes/cbcocktails.html
+++ b/recipes/cbcocktails.html
@@ -9,7 +9,7 @@
     <h1>See you soon, cowboy!</h1>
 
     <h2>Prairie Oyster</h2>
-    <img src="../images/po.webp"height="544" width="500" alt = "A screenshot of a glass dome covering a Prairie Oyster cocktail with a dollop of sauce on top in process, placed on a white plate. A cat's paw and whiskers are visible in the background next to a container with text.">
+    <img src="../images/po.webp" width="400" alt = "A screenshot of a glass dome covering a Prairie Oyster cocktail with a dollop of sauce on top in process, placed on a white plate. A cat's paw and whiskers are visible in the background next to a container with text.">
     <h3>Description</h3>
     <p>Get ready for jazzy space adventure!</p>
     <h3>Ingredients</h3>
@@ -32,7 +32,7 @@
      </ol>
  
      <h2>Cowboy</h2>
-     <img src="../images/cw.jpg"height="720" width="1280" alt ="A screenshot showing a hand reaching towards a glass containing a red liquid with ice, set on a dimly lit surface with a reddish hue.">
+     <img src="../images/cw.jpg" width="400" alt ="A screenshot showing a hand reaching towards a glass containing a red liquid with ice, set on a dimly lit surface with a reddish hue.">
     <h3>Description</h3>
     <p>*aims gun* — *fires twice* — *blows smoke off the barrel*</p>
     <h3>Ingredients</h3>
@@ -48,7 +48,7 @@
      </ol>
  
      <h2>Vodka Toddy</h2>
-     <img src="../images/vt.jpg"height="386" width="686" alt = "A screenshot of Faye with closed eyes drinking from a tall glass containing a light-colored beverage. The setting has a warm and soft lighting with muted tones.">
+     <img src="../images/vt.jpg" width="400" alt = "A screenshot of Faye with closed eyes drinking from a tall glass containing a light-colored beverage. The setting has a warm and soft lighting with muted tones.">
      <h3>Description</h3>
      <p>Drown your sorrow</p>
      <h3>Ingredients</h3>
