--- a/recipes/decocktails.html
+++ b/recipes/decocktails.html
@@ -9,7 +9,7 @@
    <h1>Time for disco, baby!</h1>
 
    <h2>Spirit Bomb</h2>
-   <img src="../images/sb.jpg"height="1104" width="736" alt="Photo of a blue cocktail in a glass with ice dust">
+   <img src="../images/sb.jpg"height="300" alt="Photo of a blue cocktail in a glass with ice dust">
    <h3>Description</h3>
    <p>You're a master of revolution, baby</p>
    <h3>Ingredients</h3>
@@ -27,7 +27,7 @@
     </ol>
 
     <h2>Tequila Sunset</h2>
-    <img src="../images/ts.jpg"height="1200" width="1200" alt="A refreshing cocktail in a clear glass with an orange gradient from red at the bottom to yellow at the top, garnished with a slice of orange on the rim. Ice cubes are visible in the drink, and similar cocktails are in the background.">
+    <img src="../images/ts.jpg"height="300" alt="A refreshing cocktail in a clear glass with an orange gradient from red at the bottom to yellow at the top, garnished with a slice of orange on the rim. Ice cubes are visible in the drink, and similar cocktails are in the background.">
    <h3>Description</h3>
    <p>Disco inferno!</p>
    <h3>Ingredients</h3>
@@ -46,7 +46,7 @@
     </ol>
 
     <h2>Sunrise Parabellum</h2>
-    <img src="../images/sp.jpg"height="5204" width="3510" alt ="A dark cocktail in a faceted glass, topped with a lime wedge and a chili powder rim on one side. It is placed on a light-colored table against a blurred background.">
+    <img src="../images/sp.jpg" width="300" alt ="A dark cocktail in a faceted glass, topped with a lime wedge and a chili powder rim on one side. It is placed on a light-colored table against a blurred background.">
     <h3>Description</h3>
     <p>Revolutionary speaking</p>
     <h3>Ingredients</h3>
